  boolean) it applies "spec inheritance" to the return value of the created
  mock (the "instance")
* BUGFIX: remove the `__unittest` marker causing traceback truncation
* Removal of deprecated `patch_object`
* Private attributes `_name`, `_methods`, '_children', `_wraps` and `_parent`
  (etc) renamed to reduce likelihood of clash with user attributes.
* Added license file to the distribution


2011/12/29 Version 0.8.0 release candidate 1
--------------------------------------------

* `create_autospec` on the return value of a mocked class will use `__call__`
  for the signature rather than `__init__`
* Performance improvement instantiating `Mock` and `MagicMock`
* Mocks used as magic methods have the same type as their parent instead of
  being hardcoded to `MagicMock`

Special thanks to Julian Berman for his help with diagnosing and improving
performance in this release.


2011/10/09 Version 0.8.0 beta 4
-------------------------------

* `patch` lookup is done at use time not at decoration time
* When attaching a Mock to another Mock as a magic method, calls are recorded
  in mock_calls
* Addition of `attach_mock` method
* Renamed the internal classes `Sentinel` and `SentinelObject` to prevent abuse
* BUGFIX: various issues around circular references with mocks (setting a mock
  return value to be itself etc)


2011/08/15 Version 0.8.0 beta 3
-------------------------------

* Mocks attached as attributes or return values to other mocks have calls
  recorded in `method_calls` and `mock_calls` of the parent (unless a name is
  already set on the child)
* Addition of `mock_add_spec` method for adding (or changing) a spec on an
  existing mock
* Improved repr for `Mock.call_args` and entries in `Mock.call_args_list`,
  `Mock.method_calls` and `Mock.mock_calls`
* Improved repr for mocks
* BUGFIX: minor fixes in the way `mock_calls` is worked out,
  especially for "intermediate" mocks in a call chain


2011/08/05 Version 0.8.0 beta 2
-------------------------------
