@@ -7,7 +7,7 @@
 :Author: `Michael Foord
  <http://www.voidspace.org.uk/python/weblog/index.shtml>`_
 :Version: |release|
-:Date: 2011/XX/XX
+:Date: 2012/XX/XX
 :Homepage: `Mock Homepage`_
 :Download: `Mock on PyPI`_
 :Documentation: `PDF Documentation
@@ -51,7 +51,7 @@ the 'action -> assertion' pattern instead of `'record -> replay'` used by many
 mocking frameworks.
 
 mock is tested on Python versions 2.4-2.7, Python 3 plus the latest versions of
-Jython and pypy.
+Jython and PyPy.
 
 .. testsetup::
 
@@ -104,7 +104,8 @@ stabilise). If you find bugs or have suggestions for improvements / extensions
 then please contact us.
 
 * `mock on PyPI <http://pypi.python.org/pypi/mock>`_
-* `mock documentation as PDF <http://www.voidspace.org.uk/downloads/mock-0.8.0.pdf>`_
+* `mock documentation as PDF
+  <http://www.voidspace.org.uk/downloads/mock-0.8.0.pdf>`_
 * `Google Code Home & Mercurial Repository <http://code.google.com/p/mock/>`_
 
 .. index:: repository
@@ -216,7 +217,7 @@ statement:
     ...     real = ProductionClass()
     ...     real.method(1, 2, 3)
     ...
-    >>> mock_method.assert_called_with(1, 2, 3)
+    >>> mock_method.assert_called_once_with(1, 2, 3)
 
 
 There is also :func:`patch.dict` for setting values in a dictionary just
@@ -261,28 +262,32 @@ class:
     >>> str(mock)
     'wheeeeee'
 
-:func:`mocksignature` is a useful companion to Mock and patch. It creates
-copies of functions that delegate to a mock, but have the same signature as the
-original function. This ensures that your mocks will fail in the same way as
-your production code if they are called incorrectly:
+For ensuring that the mock objects your tests use have the same api as the
+objects they are replacing, you can use "auto-speccing". Auto-speccing can be
+done through the `autospec` argument to patch, or the :func:`create_autospec`
+function. Auto-speccing creates mock objects that have the same attributes
+and methods as the objects they are replacing, and any functions and methods
+(including constructors) have the same call signature as the real object.
+
+This ensures that your mocks will fail in the same way as your production
+code if they are used incorrectly:
 
 .. doctest::
 
-   >>> from mock import mocksignature
+   >>> from mock import create_autospec
    >>> def function(a, b, c):
    ...     pass
    ...
-   >>> function2 = mocksignature(function)
-   >>> function2.mock.return_value = 'fishy'
-   >>> function2(1, 2, 3)
+   >>> mock_function = create_autospec(function, return_value='fishy')
+   >>> mock_function(1, 2, 3)
    'fishy'
-   >>> function2.mock.assert_called_with(1, 2, 3)
-   >>> function2('wrong arguments')
+   >>> mock_function.assert_called_once_with(1, 2, 3)
+   >>> mock_function('wrong arguments')
    Traceback (most recent call last):
     ...
    TypeError: <lambda>() takes exactly 3 arguments (1 given)
 
-`mocksignature` can also be used on classes, where it copies the signature of
+`create_autospec` can also be used on classes, where it copies the signature of
 the `__init__` method, and on callable objects where it copies the signature of
 the `__call__` method.
 
